# eyazis

LR1/src/: index.jsx
LR1/tests/: file-sample_100kB.rtf
LR2/client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
LR2/client/src/: appConfiguration.ts
LR2/client/src/components/: CaseManager.tsx  HelpView.tsx  InputView.tsx  OutputView.tsx
LR2/client/src/redux/: store.ts
LR2/server/: .gitignore  Dockerfile  README.md  docker-compose.yml  download_content.sh  pyproject.toml  run.sh
LR2/server/server/: main.py  server.py
LR2/server/server/utils/: Carcandans.py  basis.py
LR3/Server/: pyproject.toml
LR3/Server/server/: lib_interactions.py  main.py  server.py
LR3/client/: package-lock.json
LR3/client/src/: app.tsx
LR3/client/src/components/: CaseManager.tsx  HelpIcon.tsx  HelpView.tsx  InputView.tsx  OutputView.tsx
LR3/client/src/redux/: store.ts
LR4/client/: package-lock.json  package.json  vite.config.ts
LR4/client/src/: api.ts  index.css
LR4/client/src/components/: CaseManager.tsx  CringeView.tsx  GraphView.tsx  HelpView.tsx  InputView.tsx
LR4/client/src/redux/: store.ts
LR4/client/src/utils/: hellpers.ts
LR4/server/: .gitignore  run.sh
LR4/server/server/: main.py  server.py
LR4/server/server/utils/: basis.py
