[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vladimir Moshchuk <ardonplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
nltk = "^3.8.1"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
server = "server.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
